@@ -9,3 +9,10 @@ EXPECT = `if [ -f ../../expect/expect ] ; then \
 RUNTEST = `if [ -f ${srcdir}/../../dejagnu/runtest ] ; then \
 	   echo ${srcdir}/../../dejagnu/runtest ; \
 	   else echo runtest ;  fi`
+
+all-local: site.exp
+if LIBMUDFLAPTH
+	echo 'set libmudflapth 1' >> site.exp
+else
+	echo 'set libmudflapth 0' >> site.exp
+endif
